jS-Strict-Mode/Examples/example10.js
// Octal escape characters are not allowed
"use strict";
// let x = "\010"; // Removing comment from this statement will result in below mentioned Error.
// SyntaxError: Octal escape sequences are not allowed in strict mode.